# RecSys

./: .gitignore  MLproject  README.md  dockerfile  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: python-ci.yaml  python-ci.yml
configs/: test_config.yaml  train_als.yaml  train_config.yaml  train_svd.yaml
data/processed/: interactions.csv.dvc
data/raw/: .gitignore  initial_interactions.csv.dvc
ml_project/common/: __init__.py  interactions_column_params.py  last_n_splitter_params.py  metric_params.py  predict_params.py  random_splitter_params.py  read_params.py  splitter_params.py  time_range_splitter_params.py  train_params.py
ml_project/connections/: __init__.py  s3.py
ml_project/data/: __init__.py  make_dataset.py  transformer.py
ml_project/models/: __init__.py  model_fit_predict.py
notebooks/: 02_clusterization.ipynb  03_concurrency.ipynb  04_matrix_factorization.ipynb  04_svd.ipynb  05_svd_rectools.ipynb  test.ipynb
notebooks/movie_lens/: 01_check_ratings.ipynb
online_inference/: main.py
online_inference/requests/: make_request.py
pipelines/: __init__.py  eval.py  predict.py  preprocess.py  train.py
src/: utils.py
tests/: conftest.py  dataset_example.csv  test_train.py
tests/data/: test_make_dataset.py
